[package]
name = "project_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"


[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
