[package]
name = "project_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tracing = "0.1.37"


[dev-dependencies]
assert_cmd = "2.0.8"
criterion = "0.4.0"
predicates = "2.1.5"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
