[package]
name = "project_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sled = "0.34.7"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
log = "0.4.17"
parking_lot = "0.12.1"
rayon = "1.6.1"
crossbeam = "0.8.2"
structopt = "0.3.26"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
env_logger = "0.10.0"
futures = "0.3.26"
tokio = "1.25.0"
async-trait = "0.1.64"
async-std = "1.12.0"

[dev-dependencies]
assert_cmd = "2.0.8"
criterion = "0.4.0"
crossbeam-utils = "0.8.14"
predicates = "2.1.5"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[profile.release]

# Less code to include into binary
panic = 'abort'

# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1

# Optimization for size ( most aggressive )
opt-level = 'z'

# Link time optimization using using whole-program analysis
lto = true

debug =true

[[bench]]
name = "benchmark"
harness = false