[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
prost = "0.6.1"
prost-derive = "0.6.1"
labcodec = { path = "../crates/labcodec" }
labrpc = { path = "../crates/labrpc" }
thiserror = "1.0.38"
futures = "0.3.26"
rand = "0.8.5"
log = "0.4.17"

futures-timer = "3.0.2"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.8"
criterion = "0.4.0"
crossbeam-utils = "0.8.14"
predicates = "2.1.5"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"


[profile.release]

# Less code to include into binary
panic = 'abort'

# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1

# Optimization for size ( most aggressive )
opt-level = 'z'

# Link time optimization using using whole-program analysis
lto = true

debug =true

[[bench]]
name = "my_bench"
harness = false

[build-dependencies]
prost-build = "0.6.1"
